# datalake-catalog

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  README.md  dev_settings.cfg  gunicorn.conf.py  pyproject.toml
datalake_catalog/: api.py  app.py  main.py  model.py  schema.json  security.py  settings.py
datalake_catalog/config/: default.json
datalake_catalog/schemas/: __init__.py  catalog.json  configuration.json  entry.json
tests/: docker-compose.yaml  fixtures.py  test-entry.json  test_api.py  test_catalog.py  test_configuration.py  test_connection.py  test_storage.py
tests/files/: configuration.json  entry.json  storage.json
